clusters/etl7/overlays/spire-vault-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spire-vault-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
