clusters/etl7/overlays/spire-vault-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spire-vault-demo-httpd
  namespace: spire-vault-demo
  labels:
    app: spire-vault-demo
spec:
  selector:
    kubevirt.io/domain: spire-vault-demo-vm
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
