clusters/etl7/overlays/spire-vault-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spire-vault-demo-httpd
  namespace: spire-vault-demo
  labels:
    app: spire-vault-demo
spec:
  host: spire-vault-demo.apps.${CLUSTER_BASE_DOMAIN}
  tls:
    termination: edge
  to:
    kind: Service
    name: spire-vault-demo-httpd
  port:
    targetPort: http
