clusters/etl7/overlays/spire-vault-demo/tpm-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spire-vault-demo-tpm-httpd
  namespace: spire-vault-demo
  labels:
    app: spire-vault-demo-tpm
spec:
  host: spire-vault-demo-tpm.apps.${CLUSTER_BASE_DOMAIN}
  tls:
    termination: edge
  to:
    kind: Service
    name: spire-vault-demo-tpm-httpd
  port:
    targetPort: http
